[package]
name = "rust-demo"
version = "0.1.0"
authors = ["rui han <hanrui9999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
rust-crypto = "0.2.36"

[profile.dev]
opt-level = 0
[profile.release]
opt-level = 3
