[package]
name = "hello"
version = "0.1.0"
authors = ["hanrui0908 <hanrui0908@live.com>"]
description = "learning demo"
license = "MIT/Apache-2.0"
repository = "https://github.com/hanrui0908/rust-demo"
edition = "2018"
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
rust-crypto = "0.2.36"

[profile.dev]
opt-level = 0
[profile.release]
opt-level = 3
